--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ bower_components
 node_modules
 
 # MongoDB directory
-# data
+data
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
