--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "portfolio-api",
   "version": "1.0.0",
   "description": "This project is a CRUD API for my portfolio.",
-  "main": "index.js",
+  "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node api.js"
   },
   "keywords": [],
   "author": "",
