--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "portfolio-api",
+  "name": "Portfolio API",
   "version": "1.0.0",
   "description": "This project is a CRUD API for my portfolio.",
   "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "serve": "node index.js",
     "dev": "nodemon index.js"
   },
